admissibility beneficiary rule conversion